--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <a id="user-content-1" href="#1">
 <div align="center">
 <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/www.jpg"></a><br>
-<p><details><summary>个别情况打不开，请用<a href="https://github.com/nhezea392/www/blob/master/README.md?g#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
-建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://i8.ae/aaabbb">i8.ae/aaabbb</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/55552">git.io/55552</a><br>  
+<p><details><summary>个别情况打不开，请用<a href="https://github.com/nhezea392/www/blob/master/README.md?h#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
+建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://cut.gy/bbbccc">cut.gy/bbbccc</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/jjjjc">git.io/jjjjc</a><br>  
 </details>
 <br>
 <h1><p><strong>新闻热点 海外报道</strong></p></h1>
@@ -36,10 +36,10 @@
 <details><summary>更多....&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/><br></summary>
 <p><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/14/n13645429.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/岳山：中共挺俄酿内讧 涉太子党权争？    >-009fcc?logoWidth=1" title="岳山：中共挺俄酿内讧　涉太子党权争？　　>>" alt="岳山：中共挺俄酿内讧　涉太子党权争？　　>>"></a></p>
 <p><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/14/n13646447.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/FBI特工提交中兴涉嫌签证欺诈的证据    >-009fcc?logoWidth=1" title="ＦＢＩ特工提交中兴涉嫌签证欺诈的证据　　>>" alt="ＦＢＩ特工提交中兴涉嫌签证欺诈的证据　　>>"></a></p>
+<p><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/15/n13647504.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/福克斯摄影师在乌克兰遇难          >-009fcc?logoWidth=1" title="福克斯摄影师在乌克兰遇难　　　　　　　　>>" alt="福克斯摄影师在乌克兰遇难　　　　　　　　>>"></a></p>
 <p><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/13/n13643934.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/王友群：中共表面胜利实际失败的一场战争   >-009fcc?logoWidth=1" title="王友群：中共表面胜利实际失败的一场战争　>>" alt="王友群：中共表面胜利实际失败的一场战争　>>"></a></p>
 <p><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/13/n13642928.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/政法委指挥 中共“洗脑班”整人的手段（下） >-009fcc?logoWidth=1" title="政法委指挥　中共＂洗脑班＂整人的手段（下>>" alt="政法委指挥　中共＂洗脑班＂整人的手段（下>>"></a></p>
 <p><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/14/n13645952.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/消息：美告知盟友 北京暗示愿意向俄提供军援 >-009fcc?logoWidth=1" title="消息：美告知盟友　北京暗示愿意向俄提供军>>" alt="消息：美告知盟友　北京暗示愿意向俄提供军>>"></a></p>
-<p><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/14/n13645306.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/福克斯记者在乌遇袭受伤           >-009fcc?logoWidth=1" title="福克斯记者在乌遇袭受伤　　　　　　　　　>>" alt="福克斯记者在乌遇袭受伤　　　　　　　　　>>"></a></p>
 <p><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/14/n13645262.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/深圳宣布封城7天 各地现抢购潮       >-009fcc?logoWidth=1" title="深圳宣布封城７天　各地现抢购潮　　　　　>>" alt="深圳宣布封城７天　各地现抢购潮　　　　　>>"></a></p>
 <p><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/13/n13642446.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/美议员指责乌克兰总统及乌政府引关注     >-009fcc?logoWidth=1" title="美议员指责乌克兰总统及乌政府引关注　　　>>" alt="美议员指责乌克兰总统及乌政府引关注　　　>>"></a></p>
 <p><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/15/n13646723.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/上海疾控中心主任缺席疫情新闻会       >-009fcc?logoWidth=1" title="上海疾控中心主任缺席疫情新闻会　　　　　>>" alt="上海疾控中心主任缺席疫情新闻会　　　　　>>"></a></p>
@@ -245,9 +245,9 @@
 
 <h1><strong>其它的真相媒体</strong></h1>
 <p><details><summary><a target="_blank" href="https://nhezea392.github.io/vd/wm.html?from=nayunhai_852">网门动态临时版</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?elufe">网门软件下载</a></p>
+<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?jlhbp">网门软件下载</a></p>
 </details>
-<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?tqqnd">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
+<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?tpkwr">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
 <details><summary>看中国新闻网</summary>
 <br><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看大陆.md?t=02121122">看大陆</a></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看官场.md?t=02121122">看官场</a></p>
@@ -291,8 +291,8 @@
 </details>
 </details>
 <p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md#%E6%98%8E%E6%85%A7%E6%9C%9F%E5%88%8A">在线看明慧期刊</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?synme">明慧期刊</a></p>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?cnqdm">明慧特刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?ibaqb">明慧期刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?aztfr">明慧特刊</a></p>
 </details>
 
 <p><details><summary><a target="_blank" href="https://github.com/hao2369/a/wiki/jyg">聚缘阁网页代理</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://gitlab.com/szzdlab/www/raw/master/23ec.png"/></p></summary>一键点击 轻松翻墙</p>
@@ -499,10 +499,10 @@
 </strong></p>
 <div align="center">
 <hr>
-<p><strong><a href="https://github.com/nhezea392/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/nhezea392/ntdtv/blob/master/gb/contribute.md?i#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/nhezea392/www/blob/master/README.md?q#1">稳定版平台</a></strong></p>
-<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/nhezea392/www/master/index.html?p">https://ghcdn.rawgit.org/nhezea392/www/master/index.html?e</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/nhezea392/www/master/index.html?z" title="分享本平台"></img>
+<p><strong><a href="https://github.com/nhezea392/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/nhezea392/ntdtv/blob/master/gb/contribute.md?v#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/nhezea392/www/blob/master/README.md?d#1">稳定版平台</a></strong></p>
+<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/nhezea392/www/master/index.html?d">https://ghcdn.rawgit.org/nhezea392/www/master/index.html?t</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/nhezea392/www/master/index.html?k" title="分享本平台"></img>
 </div>
-<div align="center">短网址: <a href="https://i8.ae/aaabbb">i8.ae/aaabbb</a></div> 
+<div align="center">短网址: <a href="https://cut.gy/bbbccc">cut.gy/bbbccc</a></div> 
 
 </body>
 </html>
