--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <a id="user-content-1" href="#1">
 <div align="center">
 <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/www.jpg"></a><br>
-<p><details><summary>个别情况打不开，请用<a href="https://github.com/vfkyrj397/www/blob/master/README.md?a#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
-建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://cut.gy/bbbccc">cut.gy/bbbccc</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/nnnnb">git.io/nnnnb</a><br>  
+<p><details><summary>个别情况打不开，请用<a href="https://github.com/vfkyrj397/www/blob/master/README.md?j#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
+建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://i8.ae/aaabbb">i8.ae/aaabbb</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/qqqqc">git.io/qqqqc</a><br>  
 </details>
 <br>
 <h1><p><strong>新闻热点 海外报道</strong></p></h1>
@@ -37,7 +37,7 @@
 <details><summary>更多....&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/><br></summary>
 <p><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13654156.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/郝平：美中冲突在即？中共恐临“总统通牒”  >-009fcc?logoWidth=1" title="郝平：美中冲突在即？中共恐临＂总统通牒＂>>" alt="郝平：美中冲突在即？中共恐临＂总统通牒＂>>"></a></p>
 <p><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13655203.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/李克强借宪法宣誓仪式向习表忠 韩正悄露面  >-009fcc?logoWidth=1" title="李克强借宪法宣誓仪式向习表忠　韩正悄露面>>" alt="李克强借宪法宣誓仪式向习表忠　韩正悄露面>>"></a></p>
-<p><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13655010.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/吉林河北染疫人数居高不下 生意人蒙受损失  >-009fcc?logoWidth=1" title="吉林河北染疫人数居高不下　生意人蒙受损失>>" alt="吉林河北染疫人数居高不下　生意人蒙受损失>>"></a></p>
+<p><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13655010.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/吉林河北疫情更糟 生意人蒙受损失      >-009fcc?logoWidth=1" title="吉林河北疫情更糟　生意人蒙受损失　　　　>>" alt="吉林河北疫情更糟　生意人蒙受损失　　　　>>"></a></p>
 <p><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13653873.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/钟原：中共政治局常委才开始讨论新一波疫情？ >-009fcc?logoWidth=1" title="钟原：中共政治局常委才开始讨论新一波疫情>>" alt="钟原：中共政治局常委才开始讨论新一波疫情>>"></a></p>
 <p><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13654099.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/分析：刘鹤宣布稳定市场 投资者需要证据   >-009fcc?logoWidth=1" title="分析：刘鹤宣布稳定市场　投资者需要证据　>>" alt="分析：刘鹤宣布稳定市场　投资者需要证据　>>"></a></p>
 <p><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13652144.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/内幕：FBI卧底揭王书君替中共国安办事   >-009fcc?logoWidth=1" title="内幕：ＦＢＩ卧底揭王书君替中共国安办事　>>" alt="内幕：ＦＢＩ卧底揭王书君替中共国安办事　>>"></a></p>
@@ -246,9 +246,9 @@
 
 <h1><strong>其它的真相媒体</strong></h1>
 <p><details><summary><a target="_blank" href="https://vfkyrj397.github.io/vd/wm.html?from=nayunhai_852">网门动态临时版</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?ugaos">网门软件下载</a></p>
+<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?rpdlw">网门软件下载</a></p>
 </details>
-<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?vlsyc">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
+<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?kehcp">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
 <details><summary>看中国新闻网</summary>
 <br><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看大陆.md?t=02121122">看大陆</a></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看官场.md?t=02121122">看官场</a></p>
@@ -292,8 +292,8 @@
 </details>
 </details>
 <p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md#%E6%98%8E%E6%85%A7%E6%9C%9F%E5%88%8A">在线看明慧期刊</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?kpycy">明慧期刊</a></p>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?rugnb">明慧特刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?pwfkm">明慧期刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?dmthp">明慧特刊</a></p>
 </details>
 
 <p><details><summary><a target="_blank" href="https://github.com/hao2369/a/wiki/jyg">聚缘阁网页代理</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://gitlab.com/szzdlab/www/raw/master/23ec.png"/></p></summary>一键点击 轻松翻墙</p>
@@ -500,10 +500,10 @@
 </strong></p>
 <div align="center">
 <hr>
-<p><strong><a href="https://github.com/vfkyrj397/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/vfkyrj397/ntdtv/blob/master/gb/contribute.md?w#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/vfkyrj397/www/blob/master/README.md?g#1">稳定版平台</a></strong></p>
-<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/vfkyrj397/www/master/index.html?o">https://ghcdn.rawgit.org/vfkyrj397/www/master/index.html?w</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/vfkyrj397/www/master/index.html?j" title="分享本平台"></img>
+<p><strong><a href="https://github.com/vfkyrj397/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/vfkyrj397/ntdtv/blob/master/gb/contribute.md?u#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/vfkyrj397/www/blob/master/README.md?k#1">稳定版平台</a></strong></p>
+<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/vfkyrj397/www/master/index.html?v">https://ghcdn.rawgit.org/vfkyrj397/www/master/index.html?f</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/vfkyrj397/www/master/index.html?d" title="分享本平台"></img>
 </div>
-<div align="center">短网址: <a href="https://cut.gy/bbbccc">cut.gy/bbbccc</a></div> 
+<div align="center">短网址: <a href="https://i8.ae/aaabbb">i8.ae/aaabbb</a></div> 
 
 </body>
 </html>
